--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -68,7 +68,7 @@
         android:text="@string/detail_description_label"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textViewAsKnownAs"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAsKnownAs" />
+        app:layout_constraintTop_toBottomOf="@+id/also_known_tv" />
 
     <TextView
         android:id="@+id/description_tv"
